# sundew_algo

./: .coverage  .gitignore  CONTRIBUTING.md  README.md  Whitepaper.md  pyproject.toml
.github/workflows/: ci.yml
adapters/: ecg_adapter.py  run_ecg.py
benchmarks/: bench_energy.py  curve_threshold.py  eval_classification.py  grid_search.py  plot_best_tradeoffs.py  plot_grid.py  plot_real_run.py  plot_single_run.py  plot_sweep.py  rerun_from_row.py  run_ecg.py  run_presets.py  select_best.py  sweep_ecg.py  synthetic_stream.py
examples/: quickstart_demo.py
results/: README.md
src/sundew/: __init__.py  cli.py  config.py  config_presets.py  core.py  demo.py  energy.py  gating.py
tests/: test_cli.py  test_config_presets.py  test_controller.py  test_core.py  test_core_branches.py  test_energy.py  test_gating.py
