[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sundew"
version = "0.1.1"
description = "Sundew Algorithm — bio-inspired, energy-aware selective activation for edge AI systems."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Oluwafemi Idiakhoa", email = "oluwafemidiakhoa@gmail.com" }
]

keywords = [
  "bio-inspired", "event-driven", "energy-efficient",
  "adaptive-threshold", "edge-ai", "gating", "control"
]

# Core package has no hard runtime deps (pure stdlib).
# Benchmarks/plots are optional extras.
dependencies = []

[project.optional-dependencies]
benchmarks = [
  "matplotlib>=3.3",
]
dev = [
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "flake8>=6.0",
]

[project.urls]
Homepage = "https://github.com/oluwafemidiakhoa/sundew_algo"
Repository = "https://github.com/oluwafemidiakhoa/sundew_algo"
Issues = "https://github.com/oluwafemidiakhoa/sundew_algo/issues"
"CI Actions" = "https://github.com/oluwafemidiakhoa/sundew_algo/actions"

[project.scripts]
# Convenient CLI: `sundew --demo ...`
sundew = "sundew.cli:main"

[tool.setuptools]
# src/ layout
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["sundew*"]
exclude = ["tests*"]

# -------------------------
# Testing & Linting Configs
# -------------------------

[tool.pytest.ini_options]
# Make it easy to run `pytest` from repo root
testpaths = ["tests"]
# Coverage target can be tuned; raise as the project matures
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80 -q"

[tool.coverage.run]
branch = true
source = ["src"]
omit = [
  "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1

[tool.flake8]
max-line-length = 100
extend-ignore = [
  "E203",  # whitespace before ':', often conflicts with black/isort styles
]
per-file-ignores = [
  "tests/*: D",
]
