[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sundew"
version = "0.1.1"
description = "Sundew Algorithm — bio-inspired, energy-aware selective activation for edge AI systems."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

authors = [
  { name = "Oluwafemi Idiakhoa", email = "oluwafemidiakhoa@gmail.com" }
]

keywords = [
  "bio-inspired", "event-driven", "energy-efficient",
  "adaptive-threshold", "edge-ai", "gating", "control"
]

# ✅ Correct: classifiers must be an array of strings
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11"
]

# Core package has no hard runtime deps.
dependencies = []

[project.optional-dependencies]
benchmarks = [
  "numpy>=1.23,<2.0",
  "matplotlib>=3.3",
]
dev = [
  "numpy>=1.23,<2.0",      # tests import numpy
  "pytest>=8.0",
  "pytest-cov>=4.0",
  "flake8>=6.0",
]

[project.urls]
Homepage   = "https://github.com/oluwafemidiakhoa/sundew_algo"
Repository = "https://github.com/oluwafemidiakhoa/sundew_algo"
Issues     = "https://github.com/oluwafemidiakhoa/sundew_algo/issues"
"CI Actions" = "https://github.com/oluwafemidiakhoa/sundew_algo/actions"

[project.scripts]
sundew = "sundew.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["sundew*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing --cov-fail-under=80 -q"

[tool.coverage.run]
branch = true
source = ["src"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false
precision = 1

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203"]
per-file-ignores = ["tests/*: D"]
